** Login interface splitted from user management logics. Missing user management.

--- a/src/common/po/pascalsecure_reg.po
+++ b/src/common/po/pascalsecure_reg.po
@@ -2,6 +2,6 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=UTF-8"
 
 #: pascalsecure_reg.spascalsecurepalette
-msgid "PascalSecure_Controls"
+msgid "PascalSecure"
 msgstr ""
 
